--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: "PersonalityDEMO";
+  src: local("PersonalityDEMO"),
+   url("./Fonts/Personality/personalityDEMO.otf") format("truetype");
+  font-weight: bold;
+  }
+
+
