--- a/src/MainPages/Style/Home.scss
+++ b/src/MainPages/Style/Home.scss
@@ -1,7 +1,7 @@
 
-        .Home{
-                padding-left: 10vw;
-            padding-right: 10vw;
+        .AboutHome{
+                padding-left: 2.5vw;
+            padding-right: 2.5vw;
 
          
             display: flex;
