--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+         font-family: Quicksand, sans-serif;
 }
 
 .App-logo {
@@ -18,4 +19,26 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+a{
+      font-family: Quicksand, sans-serif;
+}
+p{
+      font-family: Quicksand, sans-serif;
+}
 
+  h3{
+                         font-family: Quicksand, sans-serif;
+                  }
+                  h4{
+                        font-family: Quicksand, sans-serif;
+                  }
+                  input{
+
+                  font-family: Quicksand, sans-serif;
+                  }
+                  textarea{
+                    font-family: Quicksand, sans-serif;
+                  }
+                  button{
+                    font-family: Quicksand, sans-serif;
+                  }
