--- a/src/AuthorPages/Style/AuthorHome.scss
+++ b/src/AuthorPages/Style/AuthorHome.scss
@@ -1,8 +1,8 @@
 .buttons{
-  width:100vw;
+  width:90vw;
 
   display:flex;
-flex-direction:rows;
+flex-direction:row;
 
 }
 
@@ -19,3 +19,12 @@ flex-direction:rows;
 
       font-size:100%;
         }
+
+
+.AuthorHome{
+    width:95vw;
+  padding:20px;
+  display: flex;
+    flex-direction:column;
+align-items: center;
+}
