--- a/src/MainPages/Style/About.scss
+++ b/src/MainPages/Style/About.scss
@@ -1,8 +1,9 @@
 
   .About{
 display: flex;
+
       flex-direction: column;
-      align-items: center;
+      align-items: center;}
     .text{
 
     margin:30px;
@@ -51,8 +52,13 @@ display: flex;
 
      .profileImage{
       width: 35vw;
- 
+        margin-top:30px;
+         margin-left:30px;
       }
-  }
+      .About{
+        display: flex;
+align-items:flex-start;
 
+              flex-direction: row;
+      }
   }
