--- a/src/MainPages/Style/FilterBlogs.scss
+++ b/src/MainPages/Style/FilterBlogs.scss
@@ -5,16 +5,28 @@
            
             display: flex;
             flex-direction: column;
+       
             align-items: center;
      .container{
             position: relative;
             text-align: center;
             color: white;
+              display: flex;
+                 justify-content: center;
                width:50vw;
           }
           .Blogs{
                  display: flex;
             flex-direction: column;
+            justify-content: center;
+                      align-items: center;
+          }
+          .grid{
+       
+                   display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
                       align-items: center;
           }
        
@@ -22,14 +34,17 @@
             border-style:solid;
             border-color:#b291f2;
             width:90vw;
+            height:auto;
+            margin:10px;
          
         
          }
          .cardHeader{
          background: #e2d7f7;
          color:white;
-         font-size:1vw;
+         font-size:0.5vw;
          display:flex;
+   
   
  
     
@@ -39,12 +54,31 @@
         
           
           
-         
+         width:100%;
         object-fit: cover;
         
         
         }
-
+#postTitle{
+   font-size: 1.5em;
+   font-weight: 700;
+         height:60px;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         text-align: center;
+}
+        .text{
+          background: #e2d7f7;
+         color:white;
+     
+         margin: 0px;
+         padding:5px;
+         display:flex;
+             align-items: center;
+         justify-content: center;
+         text-align: center;
+        }
  
            
         .category{
@@ -58,6 +92,7 @@
 
          display:flex;
 flex-direction:row;
+width:90%;
   
         
         
@@ -72,6 +107,9 @@ flex-direction:row;
             margin-bottom:10px;
            width:100%;
     font-size:100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
        
           
                &:hover{
@@ -81,23 +119,46 @@ flex-direction:row;
 
 
           }
-@media(min-width:40em){
-   .card{
+@media(min-width:50em){
+   .FilterBlogs{
+.card{
        
-            width:50vw;
+            width:41vw;
+           
          
         
          }
+   }
+ 
+  
+}
+
+@media(min-width:60em){
+   .FilterBlogs{
+.card{
+       
+            width:35vw;
+          
+         
+        
+         }
+   }
 
   
 }
-@media(min-width:60em){
 
-   .card{
-        
-            width:32vw;
+
+@media(min-width:70em){
+   .FilterBlogs{
+.card{
+       
+            width:35vw;
+          
          
         
          }
+   }
+
   
-  }
+}
+
